--- a/CAI_design_1_chat/App.xaml
+++ b/CAI_design_1_chat/App.xaml
@@ -1,6 +1,7 @@
 <Application x:Class="CAI_design_1_chat.App"
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+       xmlns:utu="using:Uno.Toolkit.UI"
        xmlns:utum="using:Uno.Toolkit.UI.Material">
 
   <Application.Resources>
@@ -8,6 +9,11 @@
       <ResourceDictionary.MergedDictionaries>
         <!-- Load WinUI resources -->
         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+        
+        <!-- Uno Toolkit global resources (for SafeArea, NavigationBar etc.) -->
+        <utu:ToolkitResources />
+        
+        <!-- Material Design Theme -->
         <utum:MaterialToolkitTheme
           ColorOverrideSource="ms-appx:///Styles/ColorPaletteOverride.xaml">
           <!-- NOTE: You can override the default Roboto font by providing your font assets here. -->
